dropshot/tests/fail/bad_trait_endpoint22.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<Self::Context>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_trait_endpoint22.rs:19:7
   |
19 | trait MyApi {
   |       ^^^^^

error: endpoint `unsafe_endpoint` must not be unsafe
  --> tests/fail/bad_trait_endpoint22.rs:27:11
   |
27 |     async unsafe fn unsafe_endpoint(
   |           ^^^^^^
